src/test/testcases/errors/P2/public/call01.mavl
function void main(){
    foo();
}

function void foo(){
    // Return type error
    val int baz = bar();
}

function float bar(){
  return 42.0;
}
